<resources>
    <string name="app_name">MyWeather</string>
    <string name="hint_enter_name_of_city">Enter the name of the city</string>
    <string name="switch_today">Today</string>
    <string name="switch_seven_days">7 days</string>
    <string name="button_find_by_city">Search</string>
    <string name="button_find_nearly">Nearby</string>
    <string name="toast_no_connection">No internet connection</string>
    <string name="toast_input_city">Enter the name of the city</string>
    <string name="toast_city_not_found">City not found</string>
    <string name="toast_error">Error: </string>

    <!-- Values -->
    <string name="value_of_speed_of_wind_meters_in_sec">m/s</string>
    <string name="value_of_pressure_mm">mmHg</string>
    <string name="value_of_temp_calcium">°C</string>
    <string name="content_description_weather">Weather</string>
    <string name="name_of_city">City:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="temp_feels_like">The temperature feels like:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="direction_of_wind">Wind direction:</string>
    <string name="speed_of_wind">Wind speed:</string>
    <string name="units">Units:</string>
    <string name="temp_fahrenheit">°F</string>

    <!-- Menu -->
    <string name="menu_lang">Language</string>
    <string name="menu_lang_eng">English</string>
    <string name="menu_lang_ru">Русский</string>
    <string name="menu_units">Units</string>
    <string name="menu_units_metric">Metric</string>
    <string name="menu_units_standard">Standard</string>

    <string-array name="directions_of_wind">
        <item>↓ N</item>
        <item>↙ NE</item>
        <item>← E</item>
        <item>↖ SE</item>
        <item>↑ S</item>
        <item>↗ SW</item>
        <item>→ W</item>
        <item>↘ NW</item>
    </string-array>
</resources>