<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mi_lang"
        android:title="@string/menu_lang"
        app:showAsAction="collapseActionView">
        <menu>
            <item
                android:id="@+id/mi_lang_ru"
                android:title="@string/menu_lang_ru"
                app:showAsAction="collapseActionView"/>
            <item
                android:id="@+id/mi_lang_eng"
                android:title="@string/menu_lang_eng"
                app:showAsAction="collapseActionView"/>
        </menu>
    </item>

    <item
        android:id="@+id/mi_units"
        android:title="@string/menu_lang"
        app:showAsAction="collapseActionView">
        <menu>
            <item
                android:id="@+id/mi_units_metric"
                android:title="@string/menu_units_metric"
                app:showAsAction="collapseActionView"/>
            <item
                android:id="@+id/mi_units_standard"
                android:title="@string/menu_units_standard"
                app:showAsAction="collapseActionView"/>
        </menu>
    </item>

</menu>