<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_horizontal_day_layout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/main_image_size"
        android:layout_height="@dimen/main_image_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_description_weather" />

    <TextView
        android:id="@+id/textViewTempValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_of_main_temp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewDescriptionValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewNameOfCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name_of_city"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewNameOfCityValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_before_values"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_of_line_view"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:background="#eeeeee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNameOfCityValue" />

    <TextView
        android:id="@+id/textViewLatitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:text="@string/latitude"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <TextView
        android:id="@+id/textViewLatitudeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_before_values"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_of_line_view"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:background="#eeeeee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLatitudeValue" />

    <TextView
        android:id="@+id/textViewLongitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:text="@string/longitude"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <TextView
        android:id="@+id/textViewLongitudeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_before_values"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <View
        android:id="@+id/line3"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_of_line_view"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:background="#eeeeee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLongitudeValue" />

    <TextView
        android:id="@+id/textViewFeelsLike"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:text="@string/temp_feels_like"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line3" />

    <TextView
        android:id="@+id/textViewFeelsLikeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_before_values"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/line3" />

    <View
        android:id="@+id/line4"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_of_line_view"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:background="#eeeeee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFeelsLike" />

    <TextView
        android:id="@+id/textViewPressure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:text="@string/pressure"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line4" />

    <TextView
        android:id="@+id/textViewPressureValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_before_values"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/line4" />

    <View
        android:id="@+id/line5"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_of_line_view"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:background="#eeeeee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPressureValue" />

    <TextView
        android:id="@+id/textViewHumidity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:text="@string/humidity"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line5" />

    <TextView
        android:id="@+id/textViewHumidityValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/line5" />

    <View
        android:id="@+id/line6"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_of_line_view"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:background="#eeeeee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHumidityValue" />

    <TextView
        android:id="@+id/textViewDirectionOfWind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:text="@string/direction_of_wind"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line6" />

    <TextView
        android:id="@+id/textViewDirectionOfWindValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_before_values"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/line6" />

    <View
        android:id="@+id/line7"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_of_line_view"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:background="#eeeeee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDirectionOfWindValue" />

    <TextView
        android:id="@+id/textViewSpeedOfWind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:text="@string/speed_of_wind"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line7" />

    <TextView
        android:id="@+id/textViewSpeedOfWindValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_before_values"
        android:layout_marginTop="@dimen/margin_between_lines_of_day"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/line7" />

</androidx.constraintlayout.widget.ConstraintLayout>